--- a/views/bugs/index.hbs
+++ b/views/bugs/index.hbs
@@ -6,7 +6,7 @@
     {{#each bugs}}
         <div class="card col-3 m-2">
             <div class="card-body text-center h-200">
-                <h3 class="card-title">Title: {{this.title}}</h3>
+                <h3 class="card-title">{{this.title}}</h3>
                 <p class="card-text">Priority: {{this.priority}}</p>
                 <p class="card-text">Created by: {{this.creator}}</p>
                 <p class="crad-text">Status: {{this.status}}</p>
