--- a/views/bugs/create.hbs
+++ b/views/bugs/create.hbs
@@ -4,18 +4,20 @@
         <label for="title" class="col-2">Title: *</label>
         <input name="title" id="title" required />
     </fieldset>
-    <fieldset>
-        <label for="priority" class="col-2">Priority: *</label>
-        <input name="priority" id="priority" required />
-    </fieldset>
+    <select name="priority" id="priority" required> 
+            {{#each priorities}}
+                <option>{{this.name}}</option>
+            {{/each}} 
+    </select>
     <fieldset>
         <label for="creator" class="col-2">Creator: *</label>
         <input name="creator" id="creator" required />
     </fieldset>
-    <fieldset>
-        <label for="status" class="col-2">Status: *</label>
-        <input name="status" id="status" required />
-    </fieldset>
+    <select name="status" id="status" required> 
+            {{#each statuses}}
+                <option>{{this.name}}</option>
+            {{/each}}
+    </select>
     <fieldset>
         <label for="type" class="col-2">Type: *</label>
         <input name="type" id="type" required />
@@ -30,3 +32,5 @@
     </fieldset>
     <button class="offset-2 btn btn-primary">Save</button>
 </form>
+
+
