--- a/views/bugs/edit.hbs
+++ b/views/bugs/edit.hbs
@@ -5,18 +5,20 @@
         <label for="title" class="col-2">Title: *</label>
         <input name="title" id="title" required value="{{bug.title}}"/>
     </fieldset>
-    <fieldset>
-        <label for="priority" class="col-2">Priority: *</label>
-        <input name="priority" id="priority" required value="{{bug.priority}}"/>
-    </fieldset>
+    <select name="priority" id="priority" required> 
+            {{#each priorities}}
+                <option>{{this.name}}</option>
+            {{/each}} 
+    </select>
     <fieldset>
         <label for="creator" class="col-2">Creator: *</label>
         <input name="creator" id="creator" required value="{{bug.creator}}"/>
     </fieldset>
-    <fieldset>
-        <label for="status" class="col-2">Status: *</label>
-        <input name="status" id="status" required value="{{bug.status}}"/>
-    </fieldset>
+    <select name="status" id="status" required> 
+            {{#each statuses}}
+                <option>{{this.name}}</option>
+            {{/each}}
+    </select>
     <fieldset>
         <label for="type" class="col-2">Type: *</label>
         <input name="type" id="type" required value="{{bug.type}}"/>
