--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,18 +14,31 @@
 
   </head>
   <body>
+
+<div class="page">
+
       <!-- SideBar Code from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_sidebar_responsive--> 
   <div class="sidebar">
   <a class="active" href="/">Bug Tracker</a>
   <a href="/bugs">DashBoard</a>
   <a href="/bugs/create">Create a Bug</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="/priorities">Manage Priorities</a>
+  <a href="/statuses">Manage Status</a>
 </div>
 
+<div class="mynavbar" >
+  <nav class="navbar navbar-expand-lg" style="background-color: #05386B;">
+    <div class="ms-auto navbar-nav">
+      <a class="nav-item nav-link active" href="/auth/login" style="color: #ffffff;">Login</a>
+      <a class="nav-item nav-link active" href="/auth/register" style="color: #ffffff;">Register</a>
+    </div>
+</nav>
+</div>
 
 <div class="content">
   {{{body}}}
+</div>
+
 </div>
 
   </body>
