--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,13 @@
 <h1>Login</h1>
-
+{{#if messages}}
+    <div class="alert alert-danger">
+        Invalid Login
+    </div>
+{{else}}
+    <div class="alert alert-secondary">
+        Please enter your credentials
+    </div>
+{{/if}}
 <form method="post">
   <fieldset class="form-group">
     <label for="username" class="col-2 control-label">Username: *</label>
