--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,8 +29,17 @@
 <div class="mynavbar" >
   <nav class="navbar navbar-expand-lg" style="background-color: #05386B;">
     <div class="ms-auto navbar-nav">
+      {{#if user}}
+
+      <a class="nav-item nav-link active" href="/#" style="color: #ffffff;">{{user.username}}</a>
+      <a class="nav-item nav-link active" href="/auth/logout" style="color: #ffffff;">Logout</a>
+
+      {{else}}
+
       <a class="nav-item nav-link active" href="/auth/login" style="color: #ffffff;">Login</a>
       <a class="nav-item nav-link active" href="/auth/register" style="color: #ffffff;">Register</a>
+      
+      {{/if}}
     </div>
 </nav>
 </div>
