--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
+<div>
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+</div>
+<div class="firstcontainer"></div>
+<div>
+<h3>A simple, fast and scalable bug tracking system that helps you manage bugs easily</h3>
+</div>
+<div>
+<h4 style="padding-top: 2rem;">Explore the Application More: <button style="background-color: #FC4445; padding:6px"><a href="/bugs" style="color:white;">Bug Collection</a></button></h4>
+<h4 style="padding-top: 2rem;">Add and Manage Your Own Bugs: <button style="background-color: #FC4445; padding:6px"><a href="/auth/register" style="color:white;">Become a Memeber</a></button></h4>
+</div>
+</div>
