--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,9 @@
 body {
   padding: 0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #1F2833;
+  font: 14px ;
+  background-color: #8D8741;
   color: whitesmoke;
+  font-family: 'Anton', sans-serif;
 }
 
 
@@ -14,10 +15,11 @@ a {
   margin: 0rem;
   padding: 0;
   width: 12rem;
-  background-color: #105d4d;
+  background-color: #3FEEE6;
   position: fixed;
   height: 100%;
   overflow: auto;
+  font-family: 'Anton', sans-serif;
 }
 
 .sidebar a {
@@ -25,23 +27,28 @@ a {
   color: black;
   padding: 1rem;
   text-decoration: none;
+  font-family: 'Anton', sans-serif;
 }
  
 .sidebar a.active {
-  background-color: #05386B;
+  background-color: #FC4445;
   color: white;
+  font-family: 'Anton', sans-serif;
 }
 
 .sidebar a:hover:not(.active) {
   background-color: #555;
   color: white;
+  font-family: 'Anton', sans-serif;
 }
 
 div.content {
   margin-left: 12rem;
   padding: 0.063rem 1rem;
   height: 60rem;
-  background-color: #969494;
+  background-color: #55BCC9;
+  font-family: 'Anton', sans-serif;
+  text-align: center;
 }
 
 @media screen and (max-width: 700px) {
@@ -73,4 +80,12 @@ div.content {
 
 .mynavbar{
   padding-left: 12rem;
+  font-family: 'Anton', sans-serif;
 }
+
+.firstcontainer{
+  display: grid;
+  padding: 2rem;
+  gap: 3rem;
+}
+
